# CMakeList.txt : projet CMake pour Composant4, incluez la source et définissez
# la logique spécifique au projet ici.
#
cmake_minimum_required (VERSION 3.8)

project ("Composant4")

# Ajoutez une source à l'exécutable de ce projet.
add_executable (Composant4 "Composant4.cpp" "Composant4.h")

# TODO: Ajoutez des tests et installez des cibles si nécessaire.
